--- a/coinflip.html
+++ b/coinflip.html
@@ -17,6 +17,8 @@
             onclick="gameStart(false)">Tails</button>
         <br></br>
         <p id="results"></p>
+        <br>
+        <p id="playAgain"></p>
     </div>
     <script src="scripts.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
