--- a/coinflip.html
+++ b/coinflip.html
@@ -11,14 +11,17 @@
 
 <body>
     <div class="container">
-        <h1>Toss Up: The Coin Flip Game</h1>
-        <p>Lets play <em>Toss Up</em>! Choose heads or tails:</p>
-        <button type="button" id="heads" onclick="gameStart(true)">Heads</button> <button type="button" id="tails"
-            onclick="gameStart(false)">Tails</button>
-        <br></br>
-        <p id="results"></p>
-        <br>
-        <p id="playAgain"></p>
+        <div class="">
+
+            <h1>Toss Up: The Coin Flip Game</h1>
+            <p>Lets play <em>Toss Up</em>! Choose heads or tails:</p>
+            <button class="btn btn-secondary" id="heads" onclick="gameStart(true)">Heads</button> <button
+                class="btn btn-secondary" id="tails" onclick="gameStart(false)">Tails</button>
+            <br></br>
+            <p id="results"></p>
+            <br>
+        </div>
+        <div class="text-secondary" id="playAgain"></div>
     </div>
     <script src="scripts.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
